# cpp_algo_ds

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  main.cpp
Book/: README.md
Book/Lesson1/Activity03/: Activity03.cpp
Book/Lesson1/Exercise01/: Exercise01.cpp
Book/Lesson1/Exercise02/: Exercise02.cpp  Exercise2_err.cpp
Book/Lesson1/Exercise04/: Exercise04_err.cpp
Book/Lesson1/Exercise05/: Exercise05.cpp
Book/Lesson2/Activity04/: Activity04.cpp
Book/Lesson2/Activity05/: Activity05.cpp
Book/Lesson2/Exercise08/: Exercise08.cpp
Book/Lesson2/Exercise10/: Exercise10.cpp
Book/Lesson2/Exercise11/: Exercise11.cpp
Book/Lesson2/Exercise12/: Exercise12.cpp
Book/Lesson3/Exercise13/: Exercise13.cpp
Book/Lesson3/Exercise15/: Exercise15.cpp
Book/Lesson3/Exercise16/: Exercise16.cpp
Book/Lesson3/Exercise17/: Exercise17.cpp
Book/Lesson4/: CMakeLists.txt
Book/Lesson4/Activity08/: vaccine.cpp
Book/Lesson4/Activity09/: partial_quicksort.cpp
Book/Lesson4/Activity10/: mapreduce_wordcount_skeleton.cpp
Book/Lesson4/Exercise20/: quick_sort.cpp
Book/Lesson4/Exercise21/: linear_time_select.cpp
Book/Lesson4/Exercise22/: transform_accumulate.cpp
Book/Lesson5/Activity11/: interval_scheduling_solution.cpp
Book/Lesson5/Exercise24/: shortest_job_first.cpp
Book/Lesson5/Exercise25/: fractional_knapsack.cpp
Book/Lesson6/Exercise28/: bfs.cpp
Book/Lesson6/Exercise29/: dfs.cpp
Book/Lesson6/Exercise31/: dijkstra.cpp
Book/Lesson7/Activity15/: greedy_robot.cpp
Book/Lesson7/Activity16/: randomized_graph_statistics.cpp
Book/Lesson7/Exercise32/: bellman_ford.cpp
Book/Lesson7/Exercise35/: kosaraju.cpp
Book/Lesson8/Activity18/: travel_itinerary.cpp
Book/Lesson8/Activity19/: lcs_memoization.cpp
Book/Lesson8/Activity20/: lcs_tabulation.cpp
Exercises/ch01/: build_array_exercise.h  dynamic_array_exercise.h
Sources/ch01/: build_array.h  dynamic_array.h
headers/ch01/: build_array_exercise.h  build_array_my_answer.h  dynamic_array_exercise.h  dynamic_array_my_answer.h
sources/Lesson4/: README.md
(+56 files in other folders)
